--- a/apps/dashboard/src/app/account/account-users/account-users.component.scss
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.scss
@@ -20,6 +20,9 @@
   }
 
   .add-user {
+    align-items: center;
+    display: flex;
+    gap: rhythm(1);
     margin-bottom: 48px;
     input {
       min-width: 240px;
