--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.scss
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.scss
@@ -30,6 +30,9 @@
   }
 
   .account-kb {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
     height: 60px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
     &:first-child {
@@ -46,6 +49,11 @@
         font-weight: var(--stf-font-weight-regular);
       }
     }
+
+    .actions {
+      align-items: center;
+      display: flex;
+    }
   }
 
   &-counter {
@@ -54,6 +62,13 @@
 
   &-empty {
     font-style: italic;
+  }
+
+  .add-kb-container {
+    align-items: center;
+    display: flex;
+    gap: rhythm(3);
+    margin-top: rhythm(3);
   }
 }
 
