--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -20,6 +20,7 @@
       <div>
         <pa-input
           id="client-title"
+          externalLabel
           formControlName="title"
           [errorMessages]="validationMessages.title"></pa-input>
       </div>
@@ -39,6 +40,7 @@
       <div>
         <pa-input
           id="client-email"
+          externalLabel
           formControlName="email"
           [errorMessages]="validationMessages.email"></pa-input>
       </div>
@@ -59,6 +61,7 @@
         <div>
           <pa-input
             id="client-webhook"
+            externalLabel
             formControlName="webhook"></pa-input>
         </div>
       </div>
@@ -93,11 +96,7 @@
       </select>
     </div>
 
-    <footer
-      class="mt-40"
-      fxLayout="row"
-      fxLayoutAlign="center center"
-      fxLayoutGap="16px">
+    <footer class="mt-40">
       <pa-button
         aspect="basic"
         (click)="close()">
