--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.scss
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.scss
@@ -44,4 +44,11 @@
   .webhook-hint {
     margin-top: rhythm(2);
   }
+
+  footer {
+    align-items: center;
+    display: flex;
+    gap: rhythm(2);
+    justify-content: center;
+  }
 }
