Remove FlexLayoutModule from upload module and kb user management

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
@@ -19,10 +19,7 @@
     *ngIf="canAddUsers | async">
     <form
       (ngSubmit)="addUser()"
-      [formGroup]="addForm"
-      fxLayout="row"
-      fxLayoutGap="24px"
-      fxLayoutAlign="start center">
+      [formGroup]="addForm">
       <input
         type="email"
         formControlName="email"
