--- a/apps/dashboard/src/app/upload/_upload-dialog.scss
+++ b/apps/dashboard/src/app/upload/_upload-dialog.scss
@@ -14,4 +14,11 @@
       margin-right: calc(-1 * #{rhythm(2)}); // align icon with content
     }
   }
+
+  footer {
+    align-items: center;
+    display: flex;
+    gap: rhythm(2);
+    justify-content: center;
+  }
 }
