--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .users-left,
 .users-amount {
   strong {
@@ -14,6 +16,12 @@
 .add-user {
   width: 775px;
   margin-bottom: 36px;
+
+  form {
+    align-items: center;
+    display: flex;
+    gap: rhythm(3);
+  }
   input {
     flex: 1 1 0;
   }
