[sc-4412] Implement subscriptions page

--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="billing">
+  <div class="sidebar-menu">
+    <h1>{{ 'account.billing' | translate }}</h1>
+  </div>
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
