--- a/apps/desktop/src/styles.scss
+++ b/apps/desktop/src/styles.scss
@@ -7,5 +7,5 @@
 @import 'libs/sistema/styles/apps-common';
 
 :root {
-  --desktop-background: var(--stf-gray-background);
+  --app-background-color: $color-light-stronger;
 }
