--- a/apps/desktop/src/app/upload/upload.component.html
+++ b/apps/desktop/src/app/upload/upload.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="steps">
     <nde-steps
-      [currentStep]="step"
+      [currentStep]="sync.step | async"
       (goBackTo)="goBackTo($event)"></nde-steps>
   </div>
   <div class="content">
-    <ng-container *ngIf="step === 0">
+    <ng-container *ngIf="(sync.step | async) === 0">
       <h3>{{ 'upload.source.title' | translate }}</h3>
       <p>{{ 'upload.source.help' | translate }}</p>
       <nde-connectors
@@ -13,7 +13,7 @@
         (selectConnector)="selectSource($event)"
         (cancel)="cancel()"></nde-connectors>
     </ng-container>
-    <ng-container *ngIf="step === 1">
+    <ng-container *ngIf="(sync.step | async) === 1">
       <nde-select-files
         [source]="source"
         [sourceId]="sourceId"
@@ -21,7 +21,7 @@
         [(selection)]="selection"
         (cancel)="cancel()"></nde-select-files>
     </ng-container>
-    <ng-container *ngIf="step === 2">
+    <ng-container *ngIf="(sync.step | async) === 2">
       <h2>Push to</h2>
       <nde-connectors
         type="destinations"
