Setup sistema and translations

--- a/apps/contributor/src/app/app.component.html
+++ b/apps/contributor/src/app/app.component.html
@@ -1,2 +1,6 @@
-<p>Contributor app running…</p>
+<p>
+  <pa-icon name="home"></pa-icon>
+  {{ 'generic.contributor' | translate }} app running…
+</p>
+<p></p>
 <router-outlet></router-outlet>
