Setup display alert and display announce on contributor
  - Move message-modal to common lib
  - cleanup unused components from old pastanaga
  - cleanup compile errors from common lib

--- a/libs/common/src/lib/messages/message-modal.component.html
+++ b/libs/common/src/lib/messages/message-modal.component.html
@@ -1,5 +1,5 @@
 <pa-modal-dialog>
-  <pa-modal-title>{{ data?.title | translate }}</pa-modal-title>
+  <pa-modal-title>{{ data?.['title'] | translate }}</pa-modal-title>
   <pa-modal-content [innerHtml]="data?.['message']"></pa-modal-content>
   <pa-modal-footer>
     <pa-button
