--- a/apps/contributor/src/app/app.component.html
+++ b/apps/contributor/src/app/app.component.html
@@ -1,6 +1,7 @@
-<p>
-  <pa-icon name="home"></pa-icon>
-  {{ 'generic.contributor' | translate }} app running…
-</p>
-<p></p>
 <router-outlet></router-outlet>
+<div class="version">Version: {{ version }}</div>
+<aside id="pa-toasts-block">
+  <div class="pa-toasts-container">
+    <div #toastsContainer></div>
+  </div>
+</aside>
