Modify source configuration step

--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -49,7 +49,7 @@
       qa="next"
       [disabled]="selection.isEmpty()"
       (click)="next.emit()">
-      {{ 'generic.next' | translate }}
+      {{ 'generic.save_continue' | translate }}
     </pa-button>
   </div>
 </div>
