--- a/apps/desktop/src/app/upload/upload.component.html
+++ b/apps/desktop/src/app/upload/upload.component.html
@@ -1,21 +1,22 @@
 <div class="container">
-  <ng-container *ngIf="(sync.step | async) === 0">
-    <h3>{{ 'upload.source.title' | translate }}</h3>
-    <p>{{ 'upload.source.help' | translate }}</p>
+  <ng-container *ngIf="(sync.step | async) === 0 || (sync.step | async) === 1">
+    <h2>{{ 'upload.source.title' | translate }}</h2>
+    <p>{{ 'upload.source.description' | translate }}</p>
     <nde-connectors
       type="sources"
+      [quickAccess]="quickAccess"
       (selectConnector)="selectSource($event)"
       (cancel)="cancel()"></nde-connectors>
   </ng-container>
-  <ng-container *ngIf="(sync.step | async) === 1">
+  <ng-container *ngIf="(sync.step | async) === 2">
     <nde-select-files
       [source]="source"
       [sourceId]="sourceId"
-      (next)="goTo(2)"
+      (next)="goTo(3)"
       [(selection)]="selection"
       (cancel)="cancel()"></nde-select-files>
   </ng-container>
-  <ng-container *ngIf="(sync.step | async) === 2">
+  <ng-container *ngIf="(sync.step | async) === 3">
     <h2>Push to</h2>
     <nde-connectors
       type="destinations"
