--- a/apps/desktop/src/app/connectors/connectors.component.scss
+++ b/apps/desktop/src/app/connectors/connectors.component.scss
@@ -1,8 +1,5 @@
 @import 'variables';
 
-.container {
-  display: flex;
-}
 .connectors-list {
   display: flex;
   flex-wrap: wrap;
@@ -12,6 +9,18 @@
 
 form {
   width: 100%;
+}
+
+.selected-source {
+  align-items: center;
+  display: flex;
+  font-size: $font-size-body-m;
+  font-weight: $font-weight-thin;
+  gap: rhythm(2);
+  margin: rhythm(4) 0;
+  img {
+    width: rhythm(6);
+  }
 }
 
 .field {
@@ -30,10 +39,23 @@ form {
   }
 }
 
+.help {
+  color: $color-neutral-regular;
+  display: flex;
+  gap: rhythm(1);
+  a {
+    color: inherit;
+    font-weight: $font-weight-regular;
+  }
+}
+
+.quick-access {
+  margin: rhythm(7) 0;
+}
+
 .buttons {
   display: flex;
-  justify-content: center;
-  margin-top: rhythm(5);
+  margin-top: rhythm(8);
 
   pa-button {
     margin: 0 rhythm(1);
