Update onboarding text [sc-4519]

--- a/libs/common/src/lib/user/signup/signup.component.html
+++ b/libs/common/src/lib/user/signup/signup.component.html
@@ -22,10 +22,10 @@
       </pa-input>
       <pa-input
         type="email"
-        placeholder="email@company.com"
+        [placeholder]="'login.email.signup.placeholder' | translate"
         formControlName="email"
         [errorMessages]="validationMessages.email">
-        {{ 'login.email' | translate }}
+        {{ 'login.email.signup' | translate }}
       </pa-input>
       <nsi-password-input
         formControlName="password"
