--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -81,6 +81,7 @@
   --line-height-body: calc(var(--font-size-base) * 1.25);
   --line-height-title-m-mobile: calc(var(--font-size-base) * 1.625);
   --line-height-title-m: calc(var(--font-size-base) * 1.75);
+  --line-height-title-xs: calc(var(--font-size-base) * 1.375);
 
   /* TRANSITIONS */
   --transition-superfast: 0.16s ease-in-out;
