Select kb (and fake account) for NucliaDB local

--- a/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
+++ b/libs/common/src/lib/select-account-kb/select-account/select-account.component.html
@@ -28,7 +28,9 @@
             </a>
           </div>
         </div>
-        <div class="select-account-footer">
+        <div
+          class="select-account-footer"
+          *ngIf="!standalone">
           <pa-button
             kind="inverted"
             (click)="logout()">
