--- a/apps/contributor/src/styles.scss
+++ b/apps/contributor/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'libs/sistema/theme/fonts';
 @import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
+@import 'libs/common/src/lib/base/css-variables';
 @import 'libs/sistema/styles/apps-common';
 
 :root {
