Move back kb components to dashboard, move upload-bar to common/upload

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-keys/knowledge-box-keys.component.scss
@@ -1,4 +1,4 @@
-@import 'apps/dashboard/src/variables';
+@import '../../../variables';
 
 .knowledge-box-keys {
   padding: 70px var(--app-layout-margin-right);
