--- a/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
@@ -1,7 +1,7 @@
 <div
   class="upload-bar-container"
   *ngIf="showBar | async">
-  <app-upload-bar></app-upload-bar>
+  <stf-upload-bar></stf-upload-bar>
 </div>
 
 <div class="kb-container">
