--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -1,16 +1,17 @@
-.container {
+.sw-initial-answer {
   margin: var(--rhythm-1) 0;
   display: flex;
   flex-wrap: wrap;
-}
-.actions {
-  margin-left: auto;
-  div {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-  }
-  .go-to-dialog {
-    cursor: pointer;
+
+  .actions {
+    margin-left: auto;
+    div {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+    }
+    .go-to-dialog {
+      cursor: pointer;
+    }
   }
 }
