Prevent unwanted requests
  - fix top bar: display local kbs on standalone mode
  - don't display dataset import in resource list on standalone mode
  - don't call welcome endpoint on standalone mode
  - don't get accountData from select-kb when in standalone mode

--- a/libs/common/src/lib/resources/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list.component.html
@@ -388,7 +388,7 @@
         (next)="nextPage()"></stf-pagination>
     </div>
     <div
-      *ngIf="isMainView && !!data && resultsLength === 0"
+      *ngIf="isMainView && !!data && resultsLength === 0 && !standalone"
       class="empty-kb">
       <p>
         <strong>{{ 'resource.empty' | translate }}</strong>
