--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -49,7 +49,7 @@
     </pa-button>
     <pa-button
       qa="cancel"
-      kind="inverted"
+      aspect="basic"
       (click)="cancel.next()">
       {{ 'generic.cancel' | translate }}
     </pa-button>
