Add access to label-set pages in contributor + lazy load entities module

--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.html
@@ -16,7 +16,7 @@
           formControlName="title"
           externalLabel
           [showAllErrors]="false"
-          [errorMessages]="validationMessages.title"></pa-input>
+          [errorMessages]="validationMessages['title']"></pa-input>
       </div>
 
       <div class="form-section-container">
@@ -98,7 +98,7 @@
       <pa-button
         kind="primary"
         (click)="saveLabelSet()"
-        [disabled]="labelSetForm.invalid || !hasChanges || !labelSet?.labels?.length">
+        [disabled]="labelSetForm.invalid || !hasChanges || !labelSet.labels?.length">
         {{ 'generic.save' | translate }}
       </pa-button>
       <pa-button
