--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../../../../../../../apps/dashboard/src/variables';
 
 $dashboard-header-height: rhythm(9);
 $page-title-height: rhythm(8);
