--- a/libs/search-widget/src/components/answer/Dialog.scss
+++ b/libs/search-widget/src/components/answer/Dialog.scss
@@ -39,7 +39,8 @@
 }
 @media (min-width: 599px) {
   .sw-dialog {
-    width: 90vw;
+    width: 100%;
+    height: 100vh;
     .row-1,
     .row-2 {
       display: grid;
